@@ -7,6 +7,7 @@ Cacti CHANGELOG
 -bug#0001058: Graph Filter Dropdowns to Not Respect Security Settings for User
 -bug#0001060: rrdtool 1.2.15 complain for garbage characters when rrdtool_function_xport is used
 -bug#0001061: cmd.php: potential call to invalid "availability_method" key on wrong hash
+-bug#0001064: speed up the logfile viewer and reduce the memory usage of it
 -security#0001059: SQL injection
 
 0.8.7
